WebCore/platform/graphics/Font.cpp
@@ -708,6 +708,19 @@ float Font::floatWidth(const TextRun& run) const
     return floatWidthForComplexText(run);
 }
 
+float Font::floatWidth(const TextRun& run, int extraCharsAvailable, int& charsConsumed) const
+{
+#if ENABLE(SVG_FONTS)
+    if (primaryFont()->isSVGFont())
+        return floatWidthUsingSVGFont(run, extraCharsAvailable, charsConsumed);
+#endif
+
+    charsConsumed = run.length();
+    if (canUseGlyphCache(run))
+        return floatWidthForSimpleText(run, 0);
+    return floatWidthForComplexText(run);
+}
+
 float Font::floatWidthForSimpleText(const TextRun& run, GlyphBuffer* glyphBuffer) const
 {
     WidthIterator it(this, run);
