WebCore/rendering/SVGInlineTextBox.h
@@ -58,8 +58,8 @@ namespace WebCore {
         SVGRootInlineBox* svgRootInlineBox() const;
 
         // Helper functions shared with SVGRootInlineBox     
-        float calculateGlyphWidth(RenderStyle*, int offset) const;
-        float calculateGlyphHeight(RenderStyle*, int offset) const;
+        float calculateGlyphWidth(RenderStyle* style, int offset, int extraCharsAvailable, int& charsConsumed) const;
+        float calculateGlyphHeight(RenderStyle*, int offset, int extraCharsAvailable) const;
 
         FloatRect calculateGlyphBoundaries(RenderStyle*, int offset, const SVGChar&) const;
         SVGChar* closestCharacterToPosition(int x, int y, int& offset) const;
