WebCore/svg/SVGGlyphElement.h
@@ -51,6 +51,7 @@ namespace WebCore {
 
         SVGGlyphIdentifier()
             : isValid(false)
+            , priority(0)
             , orientation(Both)
             , arabicForm(None)
             , horizontalAdvanceX(0.0f)
@@ -82,6 +83,7 @@ namespace WebCore {
         }
 
         bool isValid : 1;
+        int priority;
 
         Orientation orientation : 2;
         ArabicForm arabicForm : 3;
